第二次提交

--- a/react/style/nav.less
+++ b/react/style/nav.less
@@ -1,7 +1,11 @@
 .base{
   display: flex;
   align-content: center;
-  border: black solid 1px;
+}
+
+.navlink{
+  color: white;
+  text-decoration: none;
 }
 .nav{
   height: 48px;
@@ -14,7 +18,7 @@
 .fon{
   font-size: 13px;
   line-height: 48px;
-  margin-left: 5px;
+  margin-left: 15px;
 }
 
 .nav-img{
@@ -63,4 +67,18 @@
   margin-right: 8px;
 }
 
-//侧部样式
+.cg{
+  color: white !important;
+}
+//底部样式
+
+.bottoms{
+  display: flex;
+}
+
+.setc{
+  color: gray;
+  margin-left: 10px;
+}
+
+//左侧导航样式
